# jittor-GPNUT1-JGRec

./: .gitignore  .gitmodules  README.md  gcn.py  pyproject.toml  sitecustomize.py  zensical.toml
docs/: architecture.md  data-contract.md  development.md  gnn-research-survey.md  index.md  modeling.md  performance.md  research-survey.md  runbook.md  开源参考项目.md  赛道一：基于图学习的动态推荐任务.md  赛题说明-计图挑战赛赛道一热身赛.md
docs/assets/javascripts/: mermaid-init.js
docs/experiments/: benchmarks.md
docs/operations/: development.md  runbook.md
docs/research/: gnn-survey.md  problem-overview.md  recommender-survey.md
docs/system/: architecture.md  modeling.md
docs/task/: competition.md  data-contract.md  data-profile.md
scripts/: analyze_data_profile.py  bench_stats_features.py
src/jgrec/: __init__.py  cli.py  data.py  gnn.py  idmap.py  logging.py  model.py  reranker.py  sequence.py  stats.py  submission.py
src/jgrec/core/: __init__.py  io.py  runner.py  types.py
src/jgrec/rankers/: __init__.py  base.py  registry.py
src/jgrec/rankers/common/: __init__.py  mlp.py
src/jgrec/rankers/craft/: __init__.py  config.py  ranker.py
src/jgrec/rankers/hybrid/: __init__.py  fusion.py  gnn.py  ranker.py  sequence.py  stats.py
tests/: test_cli.py  test_core_io.py  test_idmap.py  test_ranker_registry.py  test_runner.py  test_submission.py
