[project]
name = "jittor-gpnut1-jgrec"
version = "0.1.0"
description = "MVP code for Jittor GPNUT1 dynamic recommendation"
requires-python = ">=3.10,<3.12"
dependencies = [
	"einops>=0.8.0",
	"jittor",
	"jittor-geometric",
	"networkx>=3.2",
	"nvidia-cudnn-cu12==8.9.7.29",
	"numpy==1.24.0",
	"pyparsing==3.2.1",
	"pymetis==2023.1.1",
	"scikit-learn==1.6.1",
	"scipy==1.15.1",
	"sympy==1.13.3",
	"rich>=15.0.0",
	"tyro>=0.9.0",
]

[project.scripts]
jgrec-build = "jgrec.cli:main"

[tool.uv.sources]
jittor = { path = "third_party/jittor", editable = true }
jittor-geometric = { path = "third_party/JittorGeometric", editable = true }

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
	"pytest>=8.3",
	"pytest-cov>=6.0",
    "zensical>=0.0.43",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
	"--strict-config",
	"--strict-markers",
	"--cov=jgrec",
	"--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["jgrec"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.setuptools]
package-dir = { "jgrec" = "src/jgrec" }
packages = [
	"jgrec",
	"jgrec.core",
	"jgrec.rankers",
	"jgrec.rankers.common",
	"jgrec.rankers.craft",
	"jgrec.rankers.hybrid",
	"jgrec.rankers.third_party",
]
py-modules = ["sitecustomize"]
